--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,7 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CalendatWPF"
+        xmlns:classes="clr-namespace:CalendarWPF.Classes"
+        
         mc:Ignorable="d"
+        
         Loaded="Window_Loaded"
         Title="Календарь" Height="450" Width="800">
 
@@ -43,11 +46,64 @@
             </TreeView>
         </StackPanel>
         <StackPanel>
-            <ListView
-                ItemsSource="{Binding Year}">
+            <ListView x:Name="lsView">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Width="30" Header="{Binding Path=Months[0].Name}"/>
+                        <GridViewColumn Width="40" Header="Пн.">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Width="25" Height="25" Content="{Binding Monday}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
+                        <GridViewColumn Width="40" Header="Вт.">
+                            <GridViewColumn.CellTemplate>   
+                                <DataTemplate>
+                                    <Button Width="25" Height="25" Content="{Binding Tuesday}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
+                        <GridViewColumn Width="40" Header="Ср.">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Width="25" Height="25" Content="{Binding Wednesday}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
+                        <GridViewColumn Width="40" Header="Чт.">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Width="25" Height="25" Content="{Binding Thursday}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
+                        <GridViewColumn Width="40" Header="Пт.">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Width="25" Height="25" Content="{Binding Friday}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
+                        <GridViewColumn Width="40" Header="Сб.">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Width="25" Height="25" Content="{Binding Saturday}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
+                        <GridViewColumn Width="40" Header="Вс.">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Width="25" Height="25" Content="{Binding Sunday}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
                     </GridView>
                 </ListView.View>
             </ListView>
