--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,6 +21,7 @@
             <Setter Property="Width" Value="25"/>
             <Setter Property="Height" Value="25"/>
             <Setter Property="Height" Value="25"/>
+            <Setter Property="Background" Value="WhiteSmoke"/>
             <EventSetter Event="Click" Handler="DayClick"/>
         </Style>
         <Style TargetType="GridViewColumn">
